--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html> 
 	<head>
-		<link href="main.scss" rel="stylesheet" type="text.scss"/>
+		<link href="Main.css" rel="stylesheet" type="text.css"/>
 	</head>
 
 	<body>
