--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <html> 
 	<head>
-		<link href="CSS/main.css" rel="stylesheet" type="text.css"/>
+		<link href="css/main.css" rel="stylesheet" type="text.css"/>
 	</head>
 
 	<body>
 		<h1>Hello World!</h1>
-		<h2>My first website<h2>
+		<h2>My first website</h2>
 	</body>
 
 
