--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html> 
 	<head>
-		<link href="css/main.css" rel="stylesheet" type="text.css"/>
+		<link href="https://github.com/SimonKarlsson02/SimonKarlsson02.github.io/tree/master/css/main.css" rel="stylesheet" type="text.css"/>
 	</head>
 
 	<body>
