--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link href="css/main.css">
+    <link href="https://raw.githubusercontent.com/SimonKarlsson02/SimonKarlsson02.github.io/master/css/main.css"/>
   </head>
   <body>
     <h1>Wekcome User</h1>
-    <h2
+    
   </body>
 </html>
