--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link href="rawgithub/css/main.css"/>
+    <link href="cdn.rawgit.com/css/main.css"/>
   </head>
   <body>
     <h1>Wekcome User</h1>
