--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link href="tree/master/css"/>
   </head>
   <body>
-    <h1>Wekcome User</h1>
+    <h1>Welcome User</h1>
     
   </body>
 </html>
