--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link href="tree/master/css"/>
+    <link href="stylesheets/css"/>
   </head>
   <body>
     <h1>Welcome User</h1>
