--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link href="https://cdn.rawgit.com/SimonKarlsson02/SimonKarlsson02.github.io/master/css/main.css"/>
+    <link href="https://cdn.rawgit.com/SimonKarlsson02/SimonKarlsson02.github.io/master/css/main.css" rel="stylesheet" type="text/css"/>
   </head>
   <body>
     <h1>Welcome User</h1>
