--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <link href="https://cdn.rawgit.com/SimonKarlsson02/SimonKarlsson02.github.io/master/css/main.css" rel="stylesheet" type="text/css"/>
-  </head>
-  <body>
-    <h1>Welcome User</h1>
+    <head>
+        <link rel="stylesheet" href="https://cdn.rawgit.com/SimonKarlsson02/SimonKarlsson02.github.io/master/css/main.css" type="text/css">
+    </head>
     
-  </body>
+    <body>
+          <h1>Welcome to my website</h1>
+    </body>
+    
 </html>
