--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="https://cdn.rawgit.com/SimonKarlsson02/SimonKarlsson02.github.io/master/css/main.css" type="text/css">
+        <link rel="stylesheet" href="https://rawgit.com/SimonKarlsson02/SimonKarlsson02.github.io/master/css/main.css" type="text/css">
     </head>
     
     <body>
