--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     </head>
     
     <body>
-          <h1>Welcome to my website</h1>
+        <h1>Welcome to my website</h1>
+        <h2>My First Website</h2>  
      
         <div class="Links">
             <ul>
